jdk 21 minor fixes